# Cloudflare-DNS-updater

./: Cargo.toml  LICENSE  README.md  config.json.example
.github/workflows/: ci.yml
src/: api.rs  config_loader.rs  main.rs
